# tf-m-tests

./: .editorconfig  readme.rst
app_broker/: CMakeLists.txt  assert.c  main_ns.c  os_wrapper_cmsis_rtos_v2.c  platform_init_def.c
cmake/: collect_args.cmake  utils.cmake
docs/: CMakeLists.txt  conf.py  tfm_erpc_test_build_and_run.rst
erpc/host_example/: README.rst
erpc/server/: CMakeLists.txt
erpc/server/app/: CMakeLists.txt  erpc_app.c
erpc/tfm_reg_tests/: CMakeLists.txt
lib/ext/: CMakeLists.txt
lib/ext/CMSIS/: CMakeLists.txt  README.rst
lib/ext/CMSIS/Config/: RTX_Config.h
lib/ext/CMSIS/RTOS2/RTX/Config/: RTX_Config.h
lib/ext/CMSIS/RTX/: os_systick.c
lib/ext/erpc/: CMakeLists.txt
lib/ext/qcbor/: 0001-Disable-gcc-Wmaybe-uninitialized-because-of-false-po.patch  0002-Add-missing-type-casts-to-fix-compile-warnings.patch  CMakeLists.txt
lib/ext/t_cose/: 0001-Add-t_cose_key_encode-API.patch  0002-Add-t_cose_key_decode-API.patch  0003-Import-EC-keys-with-ECDSA-xxx-algo-rather-than-ECDH.patch  0004-Remove-unused-EdDSA-calls-to-help-reduce-code-size.patch  0005-Remove-or-disable-unused-functions-in-PSA-Crypto-lay.patch  0006-Disable-unnecessary-test-cases.patch  0007-Refining-signature-buffer-size.patch  0008-Refactor-t_cose_crypto_is_algorithm_supported-in-PSA.patch  0009-Skip-AEAD-and-ECDH-tests-when-unsupported.patch  0010-Add-weak-stubs-to-fix-Armclang-armlink-L6218E-on-unu.patch  CMakeLists.txt
lib/log/: test_log.h  tfm_tests_log_msg.h
lib/nsid_manager/: CMakeLists.txt
tests_psa_arch/: CMakeLists.txt  test_app.c
tests_psa_arch/fetch_repo/: 0001-Place-crypto-test-16-at-the-beginning-of-the-test.patch  0002-Crypto-Add-psa-crypto-config-link-for-crypto-tests.patch  0003-Build-Add-manifest-tool-dependencies.patch  0004-Add-msp4-target-config-for-Corstone-315-and-320.patch  0005-Add-rp2350-platform.patch  0006-Rename-cs3x0-to-mps3.patch  0007-Attest-Use-designated-initializers.patch  0008-Fix-buffer-overflow-in-test_c061-63.c.patch  0009-Use-rsa_128_key_data-which-has-expected-format.patch  0010-Update-Musca-S1-B1-platform-configuration.patch  0011-Add-multiple-expected-return-statuses-in-case-of-inv.patch  0011-build-Add-fix-for-GCC-null-dereference-check.patch  0012-build-Add-fix-for-GCC-null-dereference-check.patch  0013-Build-Fix-x-attribute-in-api-tests-platform.patch  0014-Build-Port-to-the-NS-side-of-rse-tc-tc3-platform.patch  0015-Put-ARCH_TEST_RSA-variables-guard.patch  0016-Build-Port-to-the-NS-side-of-rse-tc-tc4-platform.patch  0017-Verify_hash-and-verify_message-can-be-gated-on-just-.patch  0018-Add-frdmmcxn947-platform.patch  0019-Attest-Replace-deprecated-psa_key_handle_t.patch  0019-Replace-deprecated-psa_key_handle_t-type.patch  0020-Add-stm32u3-platform.patch  0021-ARMCLANG.cmake-Remove-fshort-enums-and-fshort-wchar-.patch  0022-Add-stm32wba-platform.patch  0023-Add-b_u585i_iot02a-platform.patch  0024-Add-stm32h5-platform.patch  CMakeLists.txt
tests_psa_arch/spe/: CMakeLists.txt
tests_psa_arch/spe/config/: config_ns_test_psa_api.cmake.in
tests_reg/: CMakeLists.txt  test_app.c
tests_reg/spe/: CMakeLists.txt
tests_reg/test/bl1/bl1_1/: CMakeLists.txt  bl1_1_suites.c
tests_reg/test/bl1/bl1_1/suites/crypto/: bl1_1_crypto_tests.c
tests_reg/test/bl1/bl1_1/suites/integration/: bl1_1_integration_tests.c
tests_reg/test/bl1/bl1_1/suites/random/: CMakeLists.txt  bl1_1_random_generation_tests.c  bl1_1_random_generation_tests.h
tests_reg/test/bl1/bl1_2/suites/integration/: bl1_2_integration_tests.c
tests_reg/test/bl2/mcuboot/: CMakeLists.txt
tests_reg/test/config/: check_config.cmake  config.cmake  config_ns_test.cmake.in  default_s_test_config.cmake  default_test_config.cmake
tests_reg/test/config/profile/: profile_large_test.cmake
tests_reg/test/framework/: test_framework.c  test_log.h
tests_reg/test/ns_regression/: CMakeLists.txt
tests_reg/test/secure_fw/common_test_services/tfm_secure_client_2/: tfm_secure_client_2.c
tests_reg/test/secure_fw/common_test_services/tfm_secure_client_service/: tfm_secure_client_service.yaml
tests_reg/test/secure_fw/secure/: CMakeLists.txt
tests_reg/test/secure_fw/suites/attestation/: attest_token_decode.h  attest_token_decode_asymmetric.c  attest_token_decode_symmetric.c  attest_token_test.c  attest_token_test_values.h
tests_reg/test/secure_fw/suites/attestation/secure/: attest_asymmetric_s_interface_testsuite.c
tests_reg/test/secure_fw/suites/crypto/: crypto_tests_common.c  crypto_tests_common.h
tests_reg/test/secure_fw/suites/crypto/non_secure/: CMakeLists.txt  crypto_ns_interface_testsuite.c
tests_reg/test/secure_fw/suites/crypto/secure/: CMakeLists.txt  crypto_sec_interface_testsuite.c
tests_reg/test/secure_fw/suites/fih/secure/: CMakeLists.txt  fih_s_test_suite.c  fih_s_tests.h
tests_reg/test/secure_fw/suites/fpu/: fpu_tests_lib.h
tests_reg/test/secure_fw/suites/fpu/non_secure/: fpu_ns_interface_testsuite.c
tests_reg/test/secure_fw/suites/fpu/secure/: fpu_s_interface_testsuite.c
tests_reg/test/secure_fw/suites/fpu/service/: tfm_fpu_service_test.c
tests_reg/test/secure_fw/suites/fwu/mcuboot/: fwu_tests_common.c
tests_reg/test/secure_fw/suites/fwu/mcuboot/secure/: psa_fwu_s_interface_testsuite.c
tests_reg/test/secure_fw/suites/its/secure/: psa_its_s_reliability_testsuite.c
tests_reg/test/secure_fw/suites/multi_core/non_secure/: CMakeLists.txt  multi_core_ns_interface_testsuite.c
tests_reg/test/secure_fw/suites/nsid/non_secure/: CMakeLists.txt
tests_reg/test/secure_fw/suites/ps/secure/: psa_ps_s_interface_testsuite.c  psa_ps_s_reliability_testsuite.c
tests_reg/test/secure_fw/suites/qcbor/non_secure/: CMakeLists.txt
tests_reg/test/secure_fw/suites/spm/common/service/: tfm_mmiovec_test_service.c
tests_reg/test/secure_fw/suites/spm/ipc/non_secure/: ipc_ns_interface_testsuite.c
tests_reg/test/secure_fw/suites/spm/irq/non_secure/: irq_testsuite.c
tests_reg/test/secure_fw/suites/t_cose/non_secure/: CMakeLists.txt
tests_reg/test/secure_regression/: CMakeLists.txt  secure_fw.cmake  secure_suites.c
(+5 files in other folders)
